@@ -139,7 +139,9 @@ namespace MySql.Data.Types
 				case MySqlDbType.Newdate:
 				case MySqlDbType.Timestamp: return new MySqlDateTime(type);
 
-				case MySqlDbType.Decimal: return new MySqlDecimal();
+				case MySqlDbType.Decimal: 
+				case MySqlDbType.NewDecimal:
+					return new MySqlDecimal();
 
 				case MySqlDbType.Float: return new MySqlSingle();
 
